<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchIndirectNotVpnCap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_custom_check_indirect_not_vpn_cap"
        android:checked="true" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchIndirectVpnInterfaces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/settings_custom_check_indirect_vpn_interfaces"
        android:checked="true" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchIndirectMtuAnomaly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/settings_custom_check_indirect_mtu_anomaly"
        android:checked="true" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchIndirectIpsec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/settings_custom_check_indirect_ipsec"
        android:checked="true" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchIndirectRouting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/settings_custom_check_indirect_routing"
        android:checked="true" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchIndirectDns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/settings_custom_check_indirect_dns"
        android:checked="true" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchIndirectProxyTools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/settings_custom_check_indirect_proxy_tools"
        android:checked="true" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchIndirectLocalListeners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/settings_custom_check_indirect_local_listeners"
        android:checked="true" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchIndirectDumpsys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/settings_custom_check_indirect_dumpsys"
        android:checked="true" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/settings_custom_check_indirect_listener_port_threshold">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editIndirectListenerPortThreshold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="5" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
